[gd_scene load_steps=13 format=1]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PauseButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://ScoreStars.tscn" type="PackedScene" id=5]
[ext_resource path="res://QPF_assets/music/game_music.ogg" type="AudioStream" id=6]
[ext_resource path="res://Fondo.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 56
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 55.0
margin/right = 288.0
margin/bottom = 121.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighscoreLabel" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 5.0
margin/right = 288.0
margin/bottom = 71.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
text = "Hscore: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GameTimerLabel" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 105.0
margin/right = 261.0
margin/bottom = 163.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
text = "Time: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MessageLabel" type="Label" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 243.0
margin/top = 1101.0
margin/right = -259.0
margin/bottom = 780.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.184314, 0.458824, 0.901961, 1 )
text = "Flip the coins!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MessageTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="PauseButton" parent="." instance=ExtResource( 3 )]

visibility/visible = false
margin/left = 640.0
margin/right = 718.0

[node name="PauseMenu" type="Control" parent="."]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -130.0
margin/top = 0.0
margin/right = -90.0
margin/bottom = 40.0
script/script = ExtResource( 4 )

[node name="StartButton" type="Button" parent="PauseMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 339.0
margin/top = 790.0
margin/right = 649.0
margin/bottom = 874.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.184314, 0.462745, 0.901961, 1 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
custom_colors/font_color_pressed = Color( 0.184314, 0.462745, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[node name="ResumeButton" type="Button" parent="PauseMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 339.0
margin/top = 666.0
margin/right = 652.0
margin/bottom = 750.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.184314, 0.462745, 0.901961, 1 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
custom_colors/font_color_pressed = Color( 0.184314, 0.462745, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="NextLevelButton" type="Button" parent="PauseMenu"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 339.0
margin/top = 663.0
margin/right = 652.0
margin/bottom = 747.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.184314, 0.462745, 0.901961, 1 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
custom_colors/font_color_pressed = Color( 0.184314, 0.462745, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Next Level"
flat = false

[node name="LevelMenuButton" type="Button" parent="PauseMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 341.0
margin/top = 921.0
margin/right = 645.0
margin/bottom = 1005.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.184314, 0.458824, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level Menu"
flat = false

[node name="MainMenuButton" type="Button" parent="PauseMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 341.0
margin/top = 1045.0
margin/right = 645.0
margin/bottom = 1129.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.184314, 0.458824, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
flat = false

[node name="PausedGlobalTimer" type="Timer" parent="PauseMenu"]

process_mode = 1
wait_time = 0.02
one_shot = true
autostart = false

[node name="ScoreStars" parent="." instance=ExtResource( 5 )]

visibility/visible = false
margin/left = 2.0
margin/top = 110.0
margin/right = 42.0
margin/bottom = 150.0

[node name="ScoreStarsTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.8
one_shot = true
autostart = false

[node name="Game_music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = -5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Fondo" parent="." instance=ExtResource( 7 )]

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]

[connection signal="pressed" from="PauseMenu/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_ResumeButton_pressed"]

[connection signal="pressed" from="PauseMenu/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]

[connection signal="pressed" from="PauseMenu/LevelMenuButton" to="." method="_on_LevelMenuButton_pressed"]

[connection signal="pressed" from="PauseMenu/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]

[connection signal="timeout" from="PauseMenu/PausedGlobalTimer" to="." method="_on_PausedGlobalTimer_timeout"]


